Learning React Router

--- a/indecision-app/public/src/styles/components/_modal.scss
+++ b/indecision-app/public/src/styles/components/_modal.scss
@@ -12,7 +12,7 @@
 
 .ReactModalPortal .ReactModal__Overlay--after-open {
     opacity: 1;
-    background-color: unset !important;
+    // background-color: unset !important;
 }
 
 .ReactModalPortal .ReactModal__Overlay--before-close {
